see source code and the LICENSE file


2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Bug Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

07-May-2010 Christophe Demko
 # Fix [#20006] Invalid Token if install sample data twice 
 + Change the second parameter of JText::script to be a boolean or an array of options
 + Add two optional parameter at the end of JText::_ function to interprete backslashes and to indicate a string to push into the javascript strings
 + Add an optional array parameter at the end of JText::plural and JText::sprintf.

07-May-2010 Andrew Eddie
 - Removing stubbed comments support.

06-May-2010 Jean-Marie Simonet
#Fixed [20344] menu item alias . thanks Dennis and Elin
+ Adding language column in menu items view

06-May-2010 Mark Dexter
# Fix problem with sample data duplicate mainmenu (Elin Waring)
# Show edit icon on frontpage and category blog when print and email icons disabled

06-May-2010 Christophe Demko
 # Corrected a bug in #16862 (lack of languages table during installation)
 + Change the way the JLanguage::_ works: \t and \n and interpreted as 'tabulation' and 'carriage return' in ini strings (as it was in 1.5). Added a third optional parameter to the function to disable this behavior.
 ^ Improve performance (Thanks Klac Berlic and Dennis Hermatski) of JLanguagesHelper::detectLanguages
 # Verifying array observer has not been already attached
 #^ Accept Dennis Hermatski patch concerning language improvements
 # Fixed bug in caching in various controller ('language'->'lang') # Fixed bug in the JObservable::attach method when the observer is an array: it did not use the correct key
 #$ Fixed ordering with image field in languages view (Thanks Dennis Hermacki)